[package]
name = "wpm"
version = "0.1.0"
authors = ["Camille TJHOA <camille.tjhoa@outlook.com>"]
edition = "2018"
description = """
wpm is an universal word processing document model
"""
documentation = "https://github.com/ctjhoa/wpm"
homepage = "https://github.com/ctjhoa/wpm"
repository = "https://github.com/ctjhoa/wpm"
readme = "README.md"
